--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
-  "name": "bionic-text-converter-by-apimatic",
+  "name": "bionic-text-converter",
   "version": "1.0.0",
-  "description": "An extension that convert the text on the page into bionic text.",
+  "description": "An extension that converts the text on the page into bionic text by using Bionic-reading API and it's SDK provided by APIMatic!",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --config webpack.config.js"
+    "dev": "webpack --watch --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js"
   },
-  "keywords": ["bionic", "text converter"],
+  "keywords": [
+    "bionic",
+    "text converter"
+  ],
   "author": "sajjad.rizvi@apimatic.io",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.27.2",
-    "bionic-reading-apilib": "../../Downloads/Bionic+Reading+API-TS_GENERIC_LIB/TS_GENERIC_LIB",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "bionic-reading-apilib": "../../Downloads/Bionic+Reading+API-TS_GENERIC_LIB/TS_GENERIC_LIB"
   },
   "devDependencies": {
     "@babel/core": "^7.18.0",
@@ -23,6 +27,7 @@
     "copy-webpack-plugin": "^11.0.0",
     "html-webpack-plugin": "^5.5.0",
     "webpack": "^5.72.1",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.9.2",
+    "webpack-merge": "^5.8.0"
   }
 }
