--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 .vscode
 node_modules
-popup.js.LICENSE.txt
+dist/popup.js.LICENSE.txt
+dist/popup.js
+dist/popup.html
+dist/manifest.json
+dist/app.css
+dist/convert.js
