--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
 .vscode
 node_modules
-dist/popup.js.LICENSE.txt
-dist/popup.js
-dist/popup.html
-dist/manifest.json
-dist/app.css
-dist/convert.js
+dist
