--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "axios": "^0.27.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "bionic-reading-apilib": "../../Downloads/Bionic+Reading+API-TS_GENERIC_LIB/TS_GENERIC_LIB"
+    "bionic-reading-apilib": "/TS_GENERIC_LIB"
   },
   "devDependencies": {
     "@babel/core": "^7.18.0",
