--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,10 +9,10 @@
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
-      "16": "/assets/get_started16.png",
-      "32": "/assets/get_started32.png",
-      "48": "/assets/get_started48.png",
-      "128": "/assets/get_started128.png"
+      "16": "/assets/logo.png",
+      "32": "/assets/logo.png",
+      "48": "/assets/logo.png",
+      "128": "/assets/logo.png"
     }
   },
   "permissions": [
